no longer hiding time to an event on small screens

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -4,11 +4,6 @@ ol.events {
 ol.events li, .month_calendar .event {
   margin: 0.2em 0;
 }
-@media (max-width: 400px) {
-  ol.events small {
-    display: none; /* if we showed this on tiny screens, each event would wrap to a second line */
-  }
-}
 
 .highlight { /* on events#show and #who */
   margin-bottom: 1em;
